normal structure created

--- a/index.html
+++ b/index.html
@@ -15,8 +15,29 @@
     <header>
       <h1 class="text-3xl">Phone Hunter</h1>
     </header>
-    <main>
-        
+    <main class="container mx-auto">
+      <!-- search section -->
+        <section>
+          <input class="bg-slate-200 p-3 " type="text" placeholder="Search Your Phone">
+          <button class="btn btn-primary">Search</button>
+        </section>
+      <!-- search section -->
+      <!-- card container -->
+      <section class="m-4">
+        <div>
+          <div class="card w-96 bg-base-100 shadow-xl">
+            <figure><img src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" /></figure>
+            <div class="card-body">
+              <h2 class="card-title">Shoes!</h2>
+              <p>If a dog chews shoes whose shoes does he choose?</p>
+              <div class="card-actions justify-center">
+                <button class="btn btn-primary">Buy Now</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- card container end -->
     </main>
     <script src="app.js"></script>
   </body>
