--- a/index.html
+++ b/index.html
@@ -19,22 +19,22 @@
       <!-- search section -->
         <section>
           <input class="bg-slate-200 p-3 " type="text" placeholder="Search Your Phone">
-          <button class="btn btn-primary">Search</button>
+          <button id="srcBtn" class="btn btn-primary">Search</button>
         </section>
       <!-- search section -->
       <!-- card container -->
       <section class="m-4">
-        <div>
-          <div class="card w-96 bg-base-100 shadow-xl">
+        <div id="phone-container" class="grid grid-cols-3 justify-center">
+          <!-- <div class="card w-96 bg-base-100 shadow-xl">
             <figure><img src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" /></figure>
-            <div class="card-body">
-              <h2 class="card-title">Shoes!</h2>
-              <p>If a dog chews shoes whose shoes does he choose?</p>
+            <div class="card-body items-center">
+              <h2 class="card-title">Mobile Name</h2>
+              <p>mobile description</p>
               <div class="card-actions justify-center">
-                <button class="btn btn-primary">Buy Now</button>
+                <button class="btn btn-primary">Show Detail</button>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </section>
       <!-- card container end -->
